updated with 1 comment

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
     <meta name="author" content=""/>
     <link rel="icon" href="img/amazon.png"/>
 
-    <title>Hand on Lab : Deploy Java EE applications on AWS Elastic Beanstalk using Docker Containers</title>
+    <title>Hand on Lab : Deploy Java EE applications on AWS Elastic Beanstalk using Docker Containers -Repurposed by Jerry</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
@@ -38,7 +38,7 @@
     <div class="container">
 
         <div class="masthead">
-            <h3 class="text-muted">AWS Hands on Lab - Deploy Java EE Applications on AWS Elastic Beanstalk using Docker Containers</h3>
+            <h3 class="text-muted">AWS Hands on Lab - Deploy Java EE Applications on AWS Elastic Beanstalk using Docker Containers - Repurposed by Jerry</h3>
         </div>
 
         <!-- Jumbotron -->
