--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
     <meta name="author" content=""/>
     <link rel="icon" href="img/amazon.png"/>
 
-    <title>Hand on Lab : Deploy Java EE applications on AWS Elastic Beanstalk using Docker Containers -Repurposed by Jerry</title>
+    <title>Hand on Lab : Deploy Java EE applications on AWS Elastic Beanstalk using Docker Containers -test pull by Jerry</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
