--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -112,7 +112,7 @@
 
         <!-- Site footer -->
         <div class="footer">
-            <p>&copy; Amazon Web Services 2014</p>
+            <p>&copy; nothing to do with Amazon Web Services 2014</p>
         </div>
 
     </div>
